# TrueFA

./: .dockerignore  .gitignore  Dockerfile  README.md  VERSION-MANAGEMENT.md  docker-compose.yml  increment-version.bat  index.html  optimize-build.bat  package-lock.json  package.json  qr_2fa.py  release-readme.txt  release.bat  requirements.txt  run-docker.bat  run-truefa.bat  setup-windows.ps1  setup.py  sign-and-package.bat  start.sh  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  update-version.bat  vite.config.ts
dist-electron/: main.js  preload.js
electron/: main.ts  preload.ts  tsconfig.json
public/: color-palette.txt
rust-crypto-core/: Cargo.toml  build.rs  index.d.ts  index.js  package-lock.json  package.json
rust-crypto-core/src/: lib.rs
src/: App.tsx  index.css  main.py  main.tsx  qr_2fa.py  truefa.py
src/components/: AccountList.tsx  AddAccount.tsx  TokenDisplay.tsx
src/lib/: crypto.ts  qrParser.ts  types.ts
src/security/: secure_storage.py
src/types/: global.d.ts
vite-project/: package.json  tsconfig.node.json
vite-project/dist-electron/: preload.js
